Fix paths for assets in index.html
Updated paths for favicon, logo, and manifest files.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/trigonometry-app/static/js/main.1aa99c97.js"></script><link href="trigonometry-app/static/css/main.3aa70077.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/trigonometry-app/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="/trigonometry-app/logo192.png" />
+    <link rel="manifest" href="/trigonometry-app/manifest.json" />
+
+    <!-- MAIN CSS (correct path added) -->
+    <link
+      href="/trigonometry-app/static/css/main.3aa70077.css"
+      rel="stylesheet"
+    />
+
+    <title>React App</title>
+  </head>
+
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+
+    <!-- MAIN JS (correct path added) -->
+    <script
+      defer
+      src="/trigonometry-app/static/js/main.1aa99c97.js"
+    ></script>
+  </body>
+</html>
